// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.designcompose.proto.design.element;

import "design/element/path.proto";
import "design/element/rect.proto";

option java_multiple_files = true;

message ViewShape {
  message Path {
    repeated design.element.Path paths = 1;
    repeated design.element.Path strokes = 2;
    bool is_mask = 3;
  }

  oneof shape {
    Rect rect = 1;
    RoundRect round_rect = 2;
    ViewShape.Path path = 3;
    Arc arc = 4;
    VectorRect vector_rect = 5;
  }
}
